--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "study js, 2020",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "prebuild": "rm -rf dist/",
-    "start:dev": "webpack-dev-server"
+    "start:dev": "webpack-dev-server",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "css-loader": "^4.0.0",
@@ -16,10 +16,11 @@
     "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
     "webpack": "^4.44.0",
-    "webpack-cli": "^3.3.12",
+    "webpack-cli": "^3.3.12"
+  },
+  "devDependencies": {
     "webpack-dev-server": "^3.11.0"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://boramyy@github.com/boramyy/study-js.git"
