--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
   "bugs": {
     "url": "https://github.com/boramyy/study-js/issues"
   },
-  "homepage": "https://github.com/boramyy/study-js#readme"
+  "homepage": "https://github.com/boramyy/study-js#readme",
+  "dependencies": {
+    "html-loader": "^1.1.0"
+  }
 }
